--- a/index.html
+++ b/index.html
@@ -278,12 +278,27 @@
         </div>
         <span class="fas fa-quote-right"></span>
       </div>
-
-
     </div>
-
     </section>
 
+    <section class="contact" id="contact">
+      <h1 class="heading"?> <span> contact </span> us </h1>
+      <div class="row">
+        <form action="">
+          <input type="text" placeholder="name" class="box">
+          <input type="email" placeholder="email" class="box">
+          <input type="number" placeholder="number" class="box">
+          <textarea name="" class="box" placeholder="message" id="" cols="30" rows=""></textarea>
+          <input type="submit" value="send message" class="btn">
+        </form>
+
+        <div class="image">
+          <img src="images/contact-us.png" alt="">
+        </div>
+
+
+      </div>
+    </section>
 
 	
   </body>
