added styling to footer section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#products">Services</a>
-        <a href="#reviews">Portfolio</a>
+        <a href="#products">Products</a>
+        <a href="#reviews">Reviews</a>
         <a href="#contact">Contact</a>
       </nav>
 
@@ -295,9 +295,48 @@
         <div class="image">
           <img src="images/contact-us.png" alt="">
         </div>
+      </div>
+    </section>
 
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3>Quick Links </h3>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Products</a>
+          <a href="#">Reviews</a>
+          <a href="#">Contact</a>
+        </div>
+
+        <div class="box">
+          <h3> Extra Links </h3>
+          <a href="#">My Account</a>
+          <a href="#">My Order</a>
+          <a href="#">My Favorites</a>
+        </div>
+
+        <div class="box">
+          <h3> Locations </h3>
+          <a href="#">India</a>
+          <a href="#">USA</a>
+          <a href="#">Japan</a>
+          <a href="#">France</a>
+        </div>
+
+        <div class="box">
+          <h3> Contact Info </h3>
+          <a href="#">+123-456-7890</a>
+          <a href="#">contact@orchidoutpost.com</a>
+          <a href="#">Dallas, Texas</a>
+          <img src="images/payment.png" alt="">
+        </div>
 
       </div>
+
+      <div class="credit"> Created By <span> quynguy </span> | All Rights Reserved </div>
+  
+
     </section>
 
 	
